# Lingye_Agent

./: .env.example  LICENSE  README.md  my_main.py  pyproject.toml  requirements.txt  todo.md
agents/: __init__.py  context_aware_agent.py  function_call_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
app/: PDF_learning_assistant.py  codebase_maintainer.py  doc_assistant.py  project_assistant.py  tavily_search.py
config/: mcp_servers.json
context/: builder.py
core/: agent.py  config.py  database_config.py  llm.py  memory.py
examples/: PDF_learning_assistant.py  codebase_maintainer.py  doc_assistant.py  project_assistant.py  tavily_search.py
lingye_agent/: __init__.py
memory/: __init__.py  base.py  embedding.py  manager.py
memory_data/: memory.db
test/: _mcp_stdio_server.py  readme.md  test_advanced_search.py  test_async_executor.py  test_chain.py  test_context_aware_agent.py  test_context_builder.py  test_function_call_agent.py  test_get_expanded_tools.py  test_mcp_server.py  test_mcp_tool.py  test_memory_tool.py  test_note_tool.py  test_plan_solve_agent.py  test_react_agent.py  test_reflection_agent.py  test_simple_agent.py  test_simple_calculator.py  test_terminal_tool.py
tests/: _mcp_http_server.py  _mcp_sse_server.py  readme.md  test_advanced_search.py  test_async_executor.py  test_chain.py  test_context_aware_agent.py  test_context_builder.py  test_function_call_agent.py  test_get_expanded_tools.py  test_mcp_server.py  test_mcp_tool.py  test_memory_tool.py  test_note_tool.py  test_plan_solve_agent.py  (+5 more)
(+66 files in other folders)
